<resources>
    <string name="app_name">StyledEmployee</string>
    <string name="logo_image">Logo Image</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="appointments">Appointments</string>
    <string name="view_details">View Details</string>
    <string name="title">Title</string>
    <string name="secondary_text">secondary text</string>
    <string name="supporting_text">supporting_text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_sku_photo">Take Sku Photo</string>
    <string name="edit">Edit</string>
    <string name="add_item">Add Item</string>
    <string name="add_item_caps">ADD ITEM</string>
    <string name="take_item_photo">Take Item Photo</string>
    <string name="product_item">product_item</string>
</resources>